better exporter construction, fix test bug