@@ -4,7 +4,9 @@ import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.Collections;
 import java.util.Comparator;
+import java.util.HashSet;
 import java.util.Set;
 import java.util.stream.Stream;
 import org.slf4j.Logger;
@@ -21,29 +23,29 @@ public class Exporters {
   public Exporters(final Configuration config) {
     outdir = config.getOutDir();
     exporterSet = createExporterSet(config);
-    clearPreviousResults(config);
+    clearPreviousResults();
   }
 
   private Set<Exporter> createExporterSet(final Configuration config) {
-    if (config.needNotOutput()) {
-      return Set.of(new PatchLogExporter()); // export with no file output
+    final Set<Exporter> exporters = new HashSet<>();
+    exporters.add(new PatchLogExporter()); // always write patch to log
+
+    if (!config.needNotOutput()) {
+      exporters.add(new PatchFileExporter(outdir));
     }
     if (config.isHistoryRecord()) {
-      return Set.of(
-          new PatchLogExporter(),
-          new PatchFileExporter(outdir),
-          new JSONExporter(outdir));
+      exporters.add(new JSONExporter(outdir));
     }
-    return Set.of(new PatchLogExporter(), new PatchFileExporter(outdir));
+    return Collections.unmodifiableSet(exporters);
   }
 
   public void exportAll(final VariantStore variantStore) {
     this.exporterSet.forEach(e -> e.export(variantStore));
   }
 
-  private void clearPreviousResults(final Configuration config) {
-    if (config.needNotOutput() || Files.notExists(outdir)) {
-      return; // don't clear if no output specified
+  private void clearPreviousResults() {
+    if (Files.notExists(outdir)) {
+      return;
     }
 
     // delete outdir recursively
